[project]
name = "agentfive"
version = "0.1.0"
description = ""
authors = [
    {name = "Cyphle",email = "cyril.phamle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langgraph (>=0.6.10,<0.7.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
